--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,8 @@ view-run = "atroposlib.cli.view_run:main"
 view-run-multimodal = "atroposlib.cli.view_run_multimodal:main"
 atropos-sft-gen = "atroposlib.cli.sft:main"
 atropos-dpo-gen = "atroposlib.cli.dpo:main"
+atropos-grpo = "example_trainer.grpo:main"
+atropos-grpo-run = "example_trainer.run:main"
 
 [project.optional-dependencies]
 all = [
@@ -67,4 +69,4 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
-packages = ["atroposlib"]
+packages = ["atroposlib", "example_trainer"]
